--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/mobara121/EdifyTest.git",
+  "homepage": "https://mobara121.github.io/EdifyTest",
   "name": "edify-test",
   "version": "0.1.0",
   "private": true,
