--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mobara121.github.io/EdifyTest",
+  "homepage": "https://mobara121.github.io/EdifyTest/",
   "name": "edify-test",
   "version": "0.1.0",
   "private": true,
@@ -44,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "3.1.0"
+    "gh-pages": "^3.1.0"
   }
 }
