--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages-deploy": "^0.5.1",
     "install": "^0.13.0",
     "npm": "^6.14.8",
     "react": "^17.0.1",
